Fix invisible filter panel on mobile Safari

--- a/app/style/global.scss
+++ b/app/style/global.scss
@@ -135,6 +135,11 @@ $content-padding: 20px;
     
         box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 
+        @media screen and (max-width: 767px) {
+            /* Fixes panel being invisible on Safari */
+            flex: unset;
+        }
+
         #inner-filter-panel {
             padding: 15px;
             height: 100%;
